Add Sudhanshu Name in index.html

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 class="img-fluid user"
               />
               <p>4M+ users</p>
+              <p>Sudhanshu Rai</p>
             </div>
             <button class="learn-more">Learn More</button>
           </div>
