Change nav Home to House

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           />
         </div>
         <div class="items">
-          <a href="#" class="active">Home</a>
+          <a href="#" class="active">House</a>
           <a href="#">Service</a>
           <a href="#">About</a>
           <a href="#">Contact</a>
