--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </div>
         <div class="items">
           <a href="#" class="active">HouseS</a>
-          <a href="#">Service</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-          <a href="#">Blog</a>
+          <a href="#">Services</a>
+          <a href="#">About Us</a>
+          <a href="#">Contact Us</a>
+          <a href="#">Blogs</a>
         </div>
 
         <div class="other">
